# IOT_Project

./: .gitignore  README.md  requirements.txt
IOT_Project/: .cproject  .mxproject  IOT_Project Debug.launch  IOT_Project.ioc  IOT_Project.launch
IOT_Project/Core/Inc/: active_buzzer.h  tcs3200.h
IOT_Project/Core/Src/: active_buzzer.c  dht22.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
RaspberryPi/: .env  launcher.sh  main.py  requirements.txt  test_cam.py
RaspberryPi/assignments/: assignment2_1.py
RaspberryPi/model/: fruit_classification.ipynb
RaspberryPi/src/: capture_image.py  main.py
RaspberryPi/src/utils/: cam.py  capture_image.py  classify.py  dht.py  model.py  mqtt.py  uart_receive.py
RaspberryPi/tests/: test_line_notify.py  test_line_oa_push.py  test_mqtt.py  test_uart_receive.py  test_uart_send.py
RaspberryPi/utils/: setup.py
RaspberryPi/utils/utils/: __init__.py  classify.py  img_bb.py  line_notify.py  line_oa_push.py  mqtt.py  uart_send.py
messaging-api/: old_server.py  pyproject.toml  response_message.py  server.py  test_server.py
utils/: colors.py
